<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/school_tv1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:autoLink="all"
        android:text="@string/school_tv1"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/school_iv1"
        android:background="@mipmap/ic_launcher"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/school_tv2"
        android:textColor="@color/colorAccent"
        android:textSize="10sp"
        android:text="@string/school_tv2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/school_tv3"
        android:text="@string/school_tv3"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/school_tv4"
        android:text="@string/school_tv4"
        android:textSize="45sp"
        android:textColor="@color/colorNow"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/school_tv6"
        android:text="@string/school_tv6"
        android:textStyle="italic"
        android:inputType="textMultiLine"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorRandom"
        android:hint="@string/Default"
        android:id="@+id/school_et1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/school_tv7"
        />
</LinearLayout>
