<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <Button
        android:id="@+id/sd_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/sd_local_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ls"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/sd_SMS_broadcast_receiver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receiver"
        android:textAllCaps="false"/>

</LinearLayout>