<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/tv_getNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:hint="The number you get will show here"/>

    <Button
        android:id="@+id/bind_aidl_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bind_aidl_service"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/unbind_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/unbind_service"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/getNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/getnumber"
        android:textAllCaps="false"/>

</LinearLayout>
